add HomeWorkDB & auto generated AccountBooks controller,views of CRUD by model

--- a/SkillTreeMVCHW2/Views/Shared/_menu.cshtml
+++ b/SkillTreeMVCHW2/Views/Shared/_menu.cshtml
@@ -13,6 +13,7 @@
                 <li>@Html.ActionLink("首頁", "Index", "Home")</li>
                 <li>@Html.ActionLink("關於", "About", "Home")</li>
                 <li>@Html.ActionLink("連絡方式", "Contact", "Home")</li>
+                <li>@Html.ActionLink("AccountBooks", "Index", "AccountBooks")</li>
             </ul>
         </div>
     </div>
