--- a/SkillTreeMVCHW2/Views/Home/Index.cshtml
+++ b/SkillTreeMVCHW2/Views/Home/Index.cshtml
@@ -1,3 +1,10 @@
 ﻿@Html.Partial("_CreateMoney")
 
+@if (TempData["message"] != null)
+{
+    <div>
+        <h3 class="text-danger">@TempData["message"]</h3>
+    </div>
+}
+
 @Html.Action("MoneyList")
