--- a/SkillTreeMVCHW2/Views/Home/_CreateMoney.cshtml
+++ b/SkillTreeMVCHW2/Views/Home/_CreateMoney.cshtml
@@ -1,17 +1,18 @@
 ﻿@model SkillTreeMVCHW2.Models.Money
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("CreateMoney", "Home", FormMethod.Post))
 {
     @Html.AntiForgeryToken()
     <div class="well">
         <div class="form-horizontal">
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <div class="form-group">
                 @Html.LabelFor(model => model.category, htmlAttributes: new { @class = "control-label col-sm-2" })
                 <div class="col-sm-10">
-                    <select id="category" class="form-control">
+                    <select id="category" name="category" class="form-control" required>
                         <option value="" selected>請選擇</option>
-                        <option>支出</option>
-                        <option>收入</option>
+                        <option value="1">支出</option>
+                        <option value="2">收入</option>
                     </select>
                     @Html.ValidationMessageFor(model => model.category, "", new { @class = "text-danger" })
                 </div>
@@ -19,22 +20,22 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.money, htmlAttributes: new { @class = "control-label col-sm-2" })
                 <div class="col-sm-10">
-                    @Html.EditorFor(model => model.money, new { htmlAttributes = new { @class = "form-control", placeholder = "金額" } })
+                    @Html.EditorFor(model => model.money, new { htmlAttributes = new { @class = "form-control", placeholder = "金額", required = "required" } })
                     @Html.ValidationMessageFor(model => model.money, "", new { @class = "text-danger" })
                 </div>
             </div>
             <div class="form-group">
                 @Html.LabelFor(model => model.date, htmlAttributes: new { @class = "control-label col-sm-2" })
                 <div class="col-sm-10">
-                    @Html.EditorFor(model => model.date, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.EditorFor(model => model.date, new { htmlAttributes = new { @class = "form-control", required = "required" } })
                     @Html.ValidationMessageFor(model => model.date, "", new { @class = "text-danger" })
                 </div>
             </div>
             <div class="form-group">
                 @Html.LabelFor(model => model.PS, htmlAttributes: new { @class = "control-label col-sm-2" })
                 <div class="col-sm-10">
-                    @Html.TextAreaFor(model => model.PS, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.PS, "", new { @class = "text-danger" })
+                    @Html.TextAreaFor(model => model.PS, new { @class = "form-control", required = "required" })
+                    @Html.ValidationMessageFor(model => model.date, "", new { @class = "text-danger" })
                 </div>
             </div>
             <div class="form-group">
